Fixing alignment on some Civi form dropdowns.

--- a/themes/village-zendo/includes/css/civicrm.css
+++ b/themes/village-zendo/includes/css/civicrm.css
@@ -4224,9 +4224,6 @@ span.crm-status-icon {
 .crm-container.crm-public .select2-results {
   font-size: 14px;
 }
-.crm-container.crm-public .select2-container .select2-choice {
-  padding: 5px 5px 5px 8px;
-}
 .crm-container.crm-public .select2-container-multi .select2-choices {
   padding: 4px;
 }
